--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -1,25 +1,23 @@
-﻿@model ErrorViewModel
-@{
+﻿@{
     ViewData["Title"] = "Error";
 }
 
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h2 class="text-danger">An error occurred while processing your request.</h2><br />
 
-@if (Model.ShowRequestId)
+@foreach (var errorPair in ViewData.ModelState)
 {
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
+    @if (errorPair.Value.Errors.Count > 0)
+    {
+        var Errors = errorPair.Value.Errors;
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+        <h3>
+            <u>@errorPair.Key</u>:
+            @for (int i = 0; i < Errors.Count; i++)
+            {
+                string Message = i < Errors.Count - 1 ? Errors[i].ErrorMessage + "; " : Errors[i].ErrorMessage;
+                <span>@Message</span>
+            }
+        </h3>
+    }
+}
