--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TestMergeRepo
-@using TestMergeRepo.Models
+﻿@using Sprint12_MVC
+@using Sprint12_MVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
